      * Added hook.hail_spob
      * Events support tags
      * Editor supports tags
      * Library to handle conditionals for mission computer missions
      * Added support for disabling specific patrol lanes from being generated
      * Support for Lua scripting for ships
      * Changed api of evt.claim and misn.claim
      * Missions/events load Lua as chunks instead of compiling each time
      * Significant speed-ups in collision detection with quadtrees
   * Fixes
      * Typo and wording fixes
      * Fixed many corner case crashes in the editor
      * Fixed cargo missions not being generated in some parts of the universe
      * Game no longer crashes when loading save with persisted Lua pointing to inexistent systems/spobs

* 0.10.6 (unreleased)
   * Fixed potential segfault with invalid semver strings
   * Fixed sign error when buying artifacts in the Baron Prince mission (sorry)
   * Fixed behaviour of naev.trigger with parameters
   * Fixed Lua spfx volume changing with game speed
   * Fixed memory leak in luaspfx trails
   * Fixed missions doing things in systems they should not
   * Fixed Adrenal Gland III's time speed up effect
   * Fixed Misi giving upgrades for free
   * Fixed minor planet check in frontier war missions
   * Fixed typos

* 0.10.5
   * Start counting effect stacks from 1 not 2
   * Fixed launcher weapons using outfit mass instead of ammo mass
   * taiomi: fixed claim check for last mission
   * Fixed some typos
   * Fixed equipment of Lancelot in "Sharkman Is Back" mission
   * Fixed clicking on jump points also selecting planets in some cases
   * nelly02: Nelly now stops recommending stuff that only does a little disable
   * shadowvigil: Fixed mission not spawning escorts
   * flf_patrol: Missions should no longer be able to have ridiculously low credit rewards
   * Fixed some events not claiming systems that could interfere with other missions
   * hypergate_construction: should actually claim the system